# rust-sqlpackage

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TESTING.md  add_swap.sh  benchmark.sh  justfile  plan.md  run_fix_tests.sh  run_ralph.sh
.claude/: settings.json
.github/workflows/: ci.yml
benches/: pipeline.rs
docker/: README.md  compose.yml
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROMPT.md  MS-DACPAC.md  PARSER_REFACTORING_GUIDE.md  PERFORMANCE.md  PLAN-pre-post-deploy.md  PLAN.md  TEST_PLAN.md  UNQUALIFIED_COLUMN_RESOLUTION_ISSUE.md  fix_tests_implementation_plan.md  fix_tests_prompt.md  reference_db_failures_plan.md  reference_db_failures_prompt.md  test_failures_prompt.md  test_plan_xsd.md
src/: error.rs  lib.rs  main.rs  util.rs
src/compare/: mod.rs  model_xml.rs  reader.rs  report.rs  simple_xml.rs  text.rs  types.rs
src/dacpac/: metadata_xml.rs  mod.rs  model_xml.rs  origin_xml.rs  packager.rs
src/dacpac/model_xml/: body_deps.rs  column_registry.rs  header.rs  mod.rs  mod.rs.backup  other_writers.rs  programmability_writer.rs  table_writer.rs  view_writer.rs  xml_helpers.rs
src/model/: builder.rs  database_model.rs  elements.rs  mod.rs
src/parser/: column_parser.rs  constraint_parser.rs  extended_property_parser.rs  fulltext_parser.rs  function_parser.rs  ident_extract.rs  identifier_utils.rs  index_parser.rs  mod.rs  preprocess_parser.rs  procedure_parser.rs  security_parser.rs  sequence_parser.rs  sqlcmd.rs  statement_parser.rs  storage_parser.rs  synonym_parser.rs  table_type_parser.rs  token_parser_base.rs  trigger_parser.rs  tsql_dialect.rs  tsql_parser.rs
src/project/: collation.rs  mod.rs  sqlproj_parser.rs
test-project/: TestDatabase.dacpac  TestDatabase.sqlproj
test-project/Tables/: Orders.sql  Users.sql
tests/: DACPAC_COMPATIBILITY_TESTS.md  e2e_tests.rs  integration_tests.rs  unit_tests.rs
tests/common/: mod.rs
tests/e2e/: dacpac_compare.rs  deploy_tests.rs  dotnet_comparison_tests.rs  parity-baseline.json
tests/e2e/parity/: layer1_inventory.rs  layer2_properties.rs  (+7 more)
tests/integration/: build_tests.rs  compare_tests.rs  dacpac_compatibility_tests.rs  dacpac_tests.rs
tests/unit/: dacpac_comparison_tests.rs  model_tests.rs  parser_tests.rs  sqlproj_tests.rs  xml_tests.rs
tools/: README.md  compare_dacpacs.py
(+447 files in other folders)
