[package]
name = "rust-sqlpackage"
version = "0.1.0"
edition = "2021"
description = "A fast Rust compiler for SQL Server database projects (.sqlproj to .dacpac)"
license = "MIT"
authors = ["Beth"]

[dependencies]
# T-SQL parsing
sqlparser = { version = "0.54", features = ["visitor"] }

# XML handling
quick-xml = { version = "0.37", features = ["serialize"] }
roxmltree = "0.20"

# ZIP file creation
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# CLI
clap = { version = "4", features = ["derive"] }

# File system
walkdir = "2"
glob = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
regex = "1"

# Cryptography
sha2 = "0.10"

# Encoding
encoding_rs = "0.8"

[features]
default = []
xsd-validation = ["libxml"]

[dependencies.libxml]
version = "0.3"
optional = true

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-util = { version = "0.7", features = ["compat"] }
dotenvy = "0.15"

[[bin]]
name = "rust-sqlpackage"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
